--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url('./background.jpg') bottom center;
+  background: url('./images/background.jpg') bottom center;
   background-size: cover;
 }
 
@@ -29,7 +29,7 @@ body, html {
   color: white;
   background: rgba(0, 0, 0, 0.4);
   text-shadow: 0 0 .5rem black;
-  transition: all .07 ease;
+  transition: all .07s ease;
 }
 
 .playing {
